Fix label alignment in iphone.

--- a/public/styles/site/articles.less
+++ b/public/styles/site/articles.less
@@ -65,11 +65,12 @@
 
         .category-labels {
           position: absolute;
-          line-height: 1;
           left: 0;
           top: 0;
+          line-height: 1;
 
           .label {
+            vertical-align: middle;
             display: inline-block;
             background-color: #333;
             color: #FFF;
